--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
   "license": "MIT",
   "homepage": "https://github.com/alicoding/react-webpack-babel#readme",
   "dependencies": {
+    "antd": "^2.6.0",
+    "marked": "^0.3.6",
     "node-sass": "^4.1.1",
     "react": "15.4.1",
     "react-dom": "15.4.1",
+    "react-remarkable": "^1.1.1",
     "sass-loader": "^4.0.2"
   },
   "devDependencies": {
     "babel-core": "6.21.0",
     "babel-loader": "6.2.9",
+    "babel-plugin-import": "^1.1.0",
     "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.15.0",
