commit add ant design mobile

--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "homepage": "https://github.com/alicoding/react-webpack-babel#readme",
   "dependencies": {
     "antd": "^2.6.0",
+    "antd-mobile": "^0.9.13",
     "marked": "^0.3.6",
     "node-sass": "^4.1.1",
     "react": "15.4.1",
     "react-dom": "15.4.1",
+    "react-native": "^0.39.2",
     "react-remarkable": "^1.1.1",
     "sass-loader": "^4.0.2"
   },
