--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["es2015", "react"],
-  "plugins": [["import", {libraryName: "antd", style: "css" }],'transform-runtime', 'transform-decorators-legacy', 'transform-class-properties', 'react-hot-loader/babel']
+  "plugins": [["import", { "style": "css", "libraryName": "antd-mobile" }],["import", {libraryName: "antd", style: "css" }],'transform-runtime', 'transform-decorators-legacy', 'transform-class-properties', 'react-hot-loader/babel']
 }
